Document dark mode inverts PDF documents (fix #569)

--- a/client/message.styl
+++ b/client/message.styl
@@ -299,3 +299,8 @@ nav.contents
 // Equation numbering
 .message-body, .message-title
   counter-reset: katexEqnNo mmlEqnNo
+
+// PDF documents
+
+.pdf.dark
+  filter: invert(1) hue-rotate(180deg)
